--- a/SupplementaryMethods.slides.html
+++ b/SupplementaryMethods.slides.html
@@ -11994,15 +11994,17 @@ a.anchor-link {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="-Data-Augmentation-"><font color="darkblue"> Data Augmentation </font><a class="anchor-link" href="#-Data-Augmentation-">&#182;</a></h1><p>Convolutional neural networks need large amounts (typically, thousands or hundreds of thousands) of labelled data because no explicit programming is provided for their learning. They have to learn by example, so they need multiple examples. When datasets are not as large as desired a solution is to expand existing data in the training set with artificial examples created synthetically.</p>
 <p>For example, in our manuscript, we created approximately 6 images per original image by allowing random rotation, shift, horizontal flip, and zoom of the original images. Data augmentation does not only provide more examples for learning. It is also a form of regularization: that is, the convolutional neural network becomes more resistant to noisy features such as size or location of the pattern within the image and more robust to the main features that define that particular pattern (diffuse cortical malformation or periventricular nodular heterotopia in the case of this manuscript).</p>
-<h4 id="Below-are-examples-of-synthetic-images-created-during-data-augmentation-by-rotating,-zooming,-flipping,-and-shifting-the-original-images.">Below are examples of synthetic images created during data augmentation by rotating, zooming, flipping, and shifting the original images.<a class="anchor-link" href="#Below-are-examples-of-synthetic-images-created-during-data-augmentation-by-rotating,-zooming,-flipping,-and-shifting-the-original-images.">&#182;</a></h4><table> <tr>
+<h4 id="Below-are-examples-of-images-synthetically-created-during-data-augmentation-by-rotating,-zooming,-flipping,-and-shifting-the-original-images.">Below are examples of images synthetically created during data augmentation by rotating, zooming, flipping, and shifting the original images.<a class="anchor-link" href="#Below-are-examples-of-images-synthetically-created-during-data-augmentation-by-rotating,-zooming,-flipping,-and-shifting-the-original-images.">&#182;</a></h4><table> <tr>
 <td> <img src='augmented1.png' alt="Drawing" style="width: 300px;"/> </td>
 <td> <img src='augmented2.png' alt="Drawing" style="width: 300px;"/> </td>
 <td> <img src='augmented3.png' alt="Drawing" style="width: 300px;"/> </td>
+<td> <img src='augmented4.png' alt="Drawing" style="width: 300px;"/> </td>
+<td> <img src='augmented5.png' alt="Drawing" style="width: 300px;"/> </td>
 </tr> </table><p>An excellent academic article on data augmentation can be found at: <a href="https://arxiv.org/pdf/1712.04621.pdf">https://arxiv.org/pdf/1712.04621.pdf</a>. Excellent explanations on data augmentation can be found at: <a href="https://medium.com/nanonets/how-to-use-deep-learning-when-you-have-limited-data-part-2-data-augmentation-c26971dc8ced">https://medium.com/nanonets/how-to-use-deep-learning-when-you-have-limited-data-part-2-data-augmentation-c26971dc8ced</a> and <a href="https://towardsdatascience.com/data-augmentation-and-images-7aca9bd0dbe8">https://towardsdatascience.com/data-augmentation-and-images-7aca9bd0dbe8</a>.</p>
 
 </div>
 </div>
-</div></section></section>
+</div>
 </div>
 </div>
 
